# dynspv

./: .gitignore  CMakeLists.txt  dynspv.hpp_template  dynspv_generator.py
include/: dynspv.hpp
tests/: CMakeLists.txt  generator_tests.cpp
